--- a/app/globals.css
+++ b/app/globals.css
@@ -3,31 +3,99 @@
 @tailwind utilities;
 
 :root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+  --font-sans: var(--font-geist);
+  --font-mono: var(--font-geist-mono), ui-monospace, monospace;
+
+  --color-white: hsla(038deg, 100%, 090%, 1);
+  --color-black: hsla(038deg, 010%, 002%, 1);
+  --color-dark-gray: hsla(038deg, 010%, 040%, 1);
+  --color-dark-gray-20: hsla(038deg, 010%, 040%, 0.2);
+  --color-light-gray: hsla(038deg, 020%, 060%, 1);
+  --color-light-gray-20: hsla(038deg, 020%, 060%, 0.2);
+  --color-compsigh: hsla(038deg, 100%, 050%, 1);
+  --color-compsigh-20: hsla(038deg, 100%, 050%, 0.2);
+  --color-compsigh-60: hsla(038deg, 100%, 050%, 0.6);
+  --color-diff-add: hsla(120deg, 100%, 025%, 0.2);
+  --color-diff-remove: hsla(360deg, 100%, 050%, 0.2);
+
+  color: var(--color-white);
+  background-color: var(--color-black);
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
+* {
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+}
+
+@layer base {
+  /* Headings */
+  h1,
+  h2,
+  h3,
+  h4,
+  h5,
+  h6 {
+    @apply my-6;
+    line-height: 1.2;
   }
-}
+  /* Headings */
+  h1 {
+    @apply text-3xl font-bold tracking-wide;
+  }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
-}
+  h2 {
+    @apply text-2xl tracking-wide font-bold;
+  }
 
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
+  h3 {
+    @apply text-xl tracking-wide font-bold;
+  }
+
+  /* Paragraphs */
+  p {
+    @apply text-base tracking-wide leading-relaxed;
+  }
+
+  /* Links */
+  a {
+    @apply text-inherit no-underline;
+  }
+
+  /* Paragraphs, Unordered and Ordered Lists */
+  p,
+  ul,
+  ol {
+    @apply my-4;
+  }
+
+  /* List Items */
+  li {
+    @apply my-1;
+  }
+
+  /* Custom List Item Marker */
+  li::marker,
+  li::before {
+    color: var(--color-dark-gray);
+  }
+
+  /* Unordered List Items */
+  ul > li {
+    @apply list-none relative pl-6;
+  }
+
+  ul > li::before {
+    @apply absolute ml-[-22px] mt-[-1px] content-["-"];
+  }
+
+  /* Nested Unordered List Items */
+  ul ul > li {
+    @apply ml-4;
+  }
+
+  /* Code */
+  code {
+    font-family: var(--font-mono);
   }
 }
